new desing stuff

--- a/website/templates/viewladderlist.html
+++ b/website/templates/viewladderlist.html
@@ -9,7 +9,7 @@
 		<tr>
 			{% for l in ladders %}
 				{% if loop.index is even %}
-					<td>
+					<td class="evengridcell">
 				{% else %}
 					<td class="unevengridcell">
 				{% endif %}
