--- a/website/templates/viewmatchgrid.html
+++ b/website/templates/viewmatchgrid.html
@@ -8,7 +8,7 @@
 		<tr>
 			{% for l in matches %}
 				{% if loop.index is even %}
-					<td>
+					<td class="evengridcell">
 				{% else %}
 					<td class="unevengridcell">
 				{% endif %}
