--- a/website/static/style.css
+++ b/website/static/style.css
@@ -1,18 +1,15 @@
 body
 {
-	background:#eee;
-	padding:0;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:12px;
-	margin:0px auto auto auto;
-	color:#000;
+	background-color: #DBDBDB;
+	margin:0px;
 }
 
 #all {
-	background:#fff;
-	margin-left:200px;
-	margin-right:200px;
-	width:800px;
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	width: 850px;
+	padding-left: 40px;
 }
 
 a{
@@ -28,8 +25,13 @@ h1{
 }
 
 p{
+	margin-top: 0px;
 }
-
+img{ 
+	padding: 0px;
+	margin: 0px;
+	border: none;
+}
 #header{
 	height:100px;
 	clear:both;
@@ -47,63 +49,139 @@ p{
 }
 
 /*---------------- menu tab----------------------*/
-#menu_top{
-	border-top: 2px dashed #000;
-	clear:both;
-	padding: 10px;
+
+
+#tab{
+	position: absolute;
+	width: 87px;
+	height: 15px;
+	background-image: url(/images/tab.png);
+	bottom:-2px;
+	left: 50%;
+	margin-left: -44px;
+	font-size: 9px;
+	font-family: Verdana, Geneva, sans-serif;
+	line-height: 17px;
+	color: #EEE;
+	text-indent: 27px;
+}
+
+/*Internal Link Bar*/
+
+#barbackground{
+	position: absolute;
+	width: 34px;
+	height: auto;
+	margin-left:-40px;
+	margin-top: 200px;
+	border: #4B4B4B solid 1px;
+}
+
+#barinnerborder{
+	width: 32px;
+	height: auto;
+	background-color: #7C7C7C;
+	border: 1px solid #CCCCCC;
+	padding-top: 5px;
+}
+
+.imgthing{
+margin-left: 4px;
+margin-bottom: 0px;}
+
+#links{
+	width: 100%;
+	height: 34px;
+	background-color: #666;
+	background-image: url(/images/nav.png);
 	text-align: center;
-	/*height:28px;*/
-	/*border-left: 2px dashed #000;
-	border-right: 2px dashed #000;*/
-/*	border-bottom: 1px dashed #555;*/
+/* 	margin-left: 100px; */
 }
 
-#menu_top ul {
-	margin-left: 0;
-	padding-left: 0;
-	display: inline;
+a:link.nav{ 
+	margin-left: 10px;
+	color: #AAA;
+	font-family: Verdana, Geneva, sans-serif;
+	line-height: 35px;
+	font-size: 12px;
+	text-decoration: none;
+	outline: none;
+	background-image: url(/images/splitter.png);
+	background-position: right;
+	background-repeat: no-repeat;
+	padding-top: 9px;
+	padding-bottom: 10px;
+	padding-right: 11px;
 }
 
-#menu_top ul li {
-	margin-left: 0;
-	padding: 3px 15px;
-	border-left: 1px solid #000;
-	list-style: none;
-	display: inline;
+a:visited.nav{
+	margin-left: 10px;
+	color: #AAA;
+	font-family: Verdana, Geneva, sans-serif;
+	line-height: 35px;
+	font-size: 12px;
+	text-decoration: none;
+	outline: none;
+	background-image: url(images/splitter.png);
+	background-position: right;
+	background-repeat: no-repeat;
+	padding-top: 9px;
+	padding-bottom: 10px;
+	padding-right: 11px;
 }
 
-
-#menu_top ul li.first {
-	margin-left: 0;
-	border-left: none;
-	list-style: none;
-	display: inline;
+a:hover.nav{
+	color: #FFF;
 }
 
-
-a.nav:link, a.nav:visited {
-	/*display:block; float:left; padding:0px;width:122px; height:28px; margin:0px 5px 0px 5px; text-align:center;
-	text-decoration:none; background:url(images/bt.gif); color:#313537;*/
+a:active.nav{
+	color: #FFF;
 }
 
-a.nav_selected:link, a.nav_selected:visited {
-	/*display:block; float:left; padding:0px;width:122px; height:28px;margin:0px 5px 0px 5px;text-align:center;
-	text-decoration:none; background:url(images/bt_a.gif);color: #313537;*/
+/*Last Link*/
+
+a:link.nav.last{ 
+	background-image: none;
 }
 
-a.nav:hover {
-/* 	color: #313537; text-decoration:none; background:url(images/bt_a.gif); */
+a:visited.nav.last{
+	background-image: none;
+}
+
+a:hover.nav.last{
+	background-image: none;
+}
+
+a:active.nav.last{
+	background-image: none;
 }
 
 
 /*----------------content----------------*/
+#container{
+	position: relative;
+	width: 850px;
+	z-index: 10;
+}
+
+#main{
+	width: 848px;
+	background-image:url(/images/grad.png);
+	background-repeat: repeat-x;
+	border-right: 1px solid #4B4B4B;
+	border-left: 1px solid #4B4B4B;
+	background-color: #E6E6E6;
+	border-bottom: 1px solid #4B4B4B;
+}
+
 #content{
-	clear:both;
-	height:auto;
-	padding: 20px;
-	/*border-left: 2px dashed #000;
-	border-right: 2px dashed #000;*/
-	border-top: 2px dashed #000;
+	padding: 10px;
+	min-height: 100px;
+	overflow: hidden;
+	color: #333;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 12px;
+	background-image: url(/images/diag.png);
 }
 
 #content ul {
@@ -116,6 +194,20 @@ a.nav:hover {
 
 #content thead {
 	font-weight: bold;
+}
+
+.evengridcell {
+	background-color:#cbcbcb;
+	border: 1px solid #4B4B4B;
+	margin: 5px;
+	background-image: url(/images/diag.png);
+	
+}
+.unevengridcell {
+	background-color:#ebebeb;
+	border: 1px solid #4B4B4B;
+	background-image: url(/images/diag.png);
+	margin: 5px;
 }
 
 #index_block_left {
@@ -159,14 +251,11 @@ a.nav:hover {
 #index_block_content h1 {
 	margin-bottom: 0;
 }
+
 .command {
 	background-color: #eee;
 	color: #f00;
 	font-family: monospace;
-}
-
-.unevengridcell {
-	background-color:#ebebeb;
 }
 
 #help ul li{
@@ -176,6 +265,8 @@ a.nav:hover {
 #help p {
 	margin-bottom:0.2em;
 }
+
+#ladderlist { margin-top: 40px; }
 
 #ladderlist td {
 	width: 33%;
@@ -256,14 +347,6 @@ a.nav:hover {
 	text-align: left;
 }
 
-.topborder {
-	border-top: 1px dashed #444;
-}
-
-.bottomborder {
-	border-bottom: 1px dashed #444;
-}
-
 #match tr {
 	border-left: 1px dashed #444;
 	border-right: 1px dashed #444; 
@@ -304,15 +387,15 @@ a.nav:hover {
 
 /*----footer---------*/
 #footer{
-	/*width:787px;*/
-	height:58px;
-	clear:both;
-	padding:0px;
-	margin-left:200px;
-	margin-right:200px;
-	text-align:center;
-	color:#000;
-	border-top: 2px dashed #000;
+	width: 848px;
+	height: 30px;
+	text-align: center;
+	color: #666;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 10px;
+	line-height: 20px;
+	text-decoration: none;
+	outline: none;
 }
 
 .left_footer{
@@ -323,4 +406,27 @@ a.nav:hover {
 .right_footer{
 	float:right;
 	padding:15px 40px 0 0;
+}
+
+/* ----------------------- collapsible container -----------------*/
+.collapsibleContainer
+{
+	background-color:#efefef;
+}
+
+.collapsibleContainerTitle
+{
+    cursor:pointer;
+	font-size:120%;
+}
+
+.collapsibleContainerTitle div
+{
+    padding-top:5px;
+    padding-left:10px;
+}
+
+.collapsibleContainerContent
+{
+    padding: 10px;
 }
