--- a/website/static/style.css
+++ b/website/static/style.css
@@ -95,7 +95,6 @@ margin-bottom: 0px;}
 	background-color: #666;
 	background-image: url(/images/nav.png);
 	text-align: center;
-/* 	margin-left: 100px; */
 }
 
 a:link.nav{ 
@@ -258,15 +257,14 @@ a:active.nav.last{
 	font-family: monospace;
 }
 
-#help ul li{
-	list-style-position: outside;
+#help ul{
+	list-style-type: none;
 	padding: 0px;
 }
+#help li{padding-top: 15px;list-style-position: inside;}
 #help p {
-	margin-bottom:0.2em;
+	margin-bottom:0.0em;
 }
-
-#ladderlist { margin-top: 40px; }
 
 #ladderlist td {
 	width: 33%;
@@ -409,24 +407,50 @@ a:active.nav.last{
 }
 
 /* ----------------------- collapsible container -----------------*/
-.collapsibleContainer
-{
-	background-color:#efefef;
+
+.collapsible {
+    margin: 0;
+    padding:7px;
+    height:20px;
+    border-top:#f0f0f0 1px solid;
+    background: #cccccc;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration:none;
+    text-transform:uppercase;
+    color: #000;
+    font-size:1em; 
 }
 
-.collapsibleContainerTitle
-{
-    cursor:pointer;
-	font-size:120%;
+.collapse-open {
+    background:#6b6b6b;
+    color: #fff;
 }
 
-.collapsibleContainerTitle div
-{
-    padding-top:5px;
-    padding-left:10px;
+.collapse-open span {
+	display:block;
+    float:left;
+    padding:9px;
+    background:url(/images/minus.png) center center no-repeat;
+} 
+
+.collapse-close span {
+    display:block;
+    float:left;
+    background:url(/images/plus.png) center center no-repeat;
+    padding:9px;
 }
 
-.collapsibleContainerContent
-{
-    padding: 10px;
+.collapsible_container {
+	border-left:#6b6b6b 1px solid;
+	border-right:#6b6b6b 1px solid;
+	border-bottom:#6b6b6b 1px solid;
+	background-color:#dbdbdb;
+	background-image: url(/images/diag.png);
+	margin: 0;
+	padding: 0;
+}
+
+.collapsible_content { 
+	    margin: 0;
+    padding:10px;
 }
