--- a/website/templates/viewmatch.html
+++ b/website/templates/viewmatch.html
@@ -2,11 +2,15 @@
 
 {% block content %}
 <script type="text/javascript" src="/static/jquery.js"></script>  
-<script type="text/javascript" src="/static/diQuery-collapsiblePanel.js"></script>  
-<script language="javascript" type="text/javascript">
-    $(document).ready(function() {
-        $(".collapsibleContainer").collapsiblePanel();
+<script type="text/javascript" src="/static/jquery.cookie.js"></script>
+<script type="text/javascript" src="/static/jquery.collapsible.min.js"></script>  
+<script type="text/javascript">
+  $(document).ready(function() {
+    //collapsible management
+    $('.collapsible').collapsible({
+      defaultOpen: 'nav-section1,nav-section3'
     });
+  });
 </script>
 <h1>Match #{{matchinfo.match.id}}</h1>
 <div>
@@ -32,7 +36,7 @@
 	</table>
 </div>
 <div id='results' >
-	<h3>Results</h3>
+	<h3>Results </h3>
 	<table>
 		<thead>
 			<tr>
@@ -81,7 +85,8 @@
 	</table>
 </div>
 <br/>
-<div class="collapsibleContainer" title="Settings">
+<h3 class="collapsible" id="settings"><span></span>Settings</h3>
+<div class="collapsible_container">
 	<table class="padded">
 		<tbody>
 		{% for s in matchinfo.match.settings %}
