--- a/website/static/style.css
+++ b/website/static/style.css
@@ -266,6 +266,20 @@ a:active.nav.last{
 	margin-bottom:0.0em;
 }
 
+#fame h3 {
+	margin: 0;
+	margin-top:2em;
+	margin-bottom:0.5em;
+    padding:7px;
+    height:20px;
+    background:#6b6b6b;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration:none;
+    text-transform:uppercase;
+    font-size:1em; 
+}
+
 #ladderlist td {
 	width: 33%;
 	vertical-align: top;
@@ -451,6 +465,6 @@ a:active.nav.last{
 }
 
 .collapsible_content { 
-	    margin: 0;
+	margin: 0;
     padding:10px;
 }
