--- a/website/templates/viewmatchgrid.html
+++ b/website/templates/viewmatchgrid.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% set count = 1 %}
 <div id='matchgrid'>
-	<table>
+	<table cellpadding="5px" cellspacing="5px">
 	<tbody>
 		<tr>
 			{% for l in matches %}
