--- a/website/static/style.css
+++ b/website/static/style.css
@@ -48,24 +48,6 @@ img{
 	font-weight: bolder;
 }
 
-/*---------------- menu tab----------------------*/
-
-
-#tab{
-	position: absolute;
-	width: 87px;
-	height: 15px;
-	background-image: url(/images/tab.png);
-	bottom:-2px;
-	left: 50%;
-	margin-left: -44px;
-	font-size: 9px;
-	font-family: Verdana, Geneva, sans-serif;
-	line-height: 17px;
-	color: #EEE;
-	text-indent: 27px;
-}
-
 /*Internal Link Bar*/
 
 #barbackground{
@@ -91,18 +73,19 @@ margin-bottom: 0px;}
 
 #links{
 	width: 100%;
-	height: 34px;
+	height: 1.99em;
+	line-height: 2.0em;
 	background-color: #666;
 	background-image: url(/images/nav.png);
 	text-align: center;
+	font-size: 1em;
 }
 
-a:link.nav{ 
+#links a:link.nav{ 
 	margin-left: 10px;
 	color: #AAA;
 	font-family: Verdana, Geneva, sans-serif;
-	line-height: 35px;
-	font-size: 12px;
+	
 	text-decoration: none;
 	outline: none;
 	background-image: url(/images/splitter.png);
@@ -113,12 +96,11 @@ a:link.nav{
 	padding-right: 11px;
 }
 
-a:visited.nav{
+#links a:visited.nav{
 	margin-left: 10px;
 	color: #AAA;
 	font-family: Verdana, Geneva, sans-serif;
-	line-height: 35px;
-	font-size: 12px;
+
 	text-decoration: none;
 	outline: none;
 	background-image: url(images/splitter.png);
@@ -179,7 +161,6 @@ a:active.nav.last{
 	overflow: hidden;
 	color: #333;
 	font-family: Verdana, Geneva, sans-serif;
-	font-size: 12px;
 	background-image: url(/images/diag.png);
 }
 
@@ -193,6 +174,7 @@ a:active.nav.last{
 
 #content thead {
 	font-weight: bold;
+	font-size: 1.15em;
 }
 
 .evengridcell {
@@ -271,13 +253,14 @@ a:active.nav.last{
 	margin-top:2em;
 	margin-bottom:0.5em;
     padding:7px;
-    height:20px;
+    height:1.3em;
+	line-height:1.3em;
     background:#6b6b6b;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration:none;
     text-transform:uppercase;
-    font-size:1em; 
+    font-size:1.25em; 
 }
 
 #ladderlist td {
@@ -328,6 +311,10 @@ a:active.nav.last{
 	padding-bottom:2%;
 }
 
+.seperated_cells {
+	border-spacing: 5px;
+}
+
 #matchgrid h5 {
 	text-align: center;
 }
@@ -340,8 +327,15 @@ a:active.nav.last{
 	padding: 0.3em;	
 }
 
+#results  {
+	width:50%;
+	margin-left: auto;
+	margin-right: auto;
+}
 #results table {
-	width:60%;
+	width:90%;
+	margin-left: auto;
+	margin-right: auto;
 }
 #wideresults table {
 	width:90%;
@@ -404,7 +398,7 @@ a:active.nav.last{
 	text-align: center;
 	color: #666;
 	font-family: Verdana, Geneva, sans-serif;
-	font-size: 10px;
+	font-size: 0.8em;
 	line-height: 20px;
 	text-decoration: none;
 	outline: none;
@@ -426,6 +420,7 @@ a:active.nav.last{
     margin: 0;
     padding:7px;
     height:20px;
+	line-height:20px;
     border-top:#f0f0f0 1px solid;
     background: #cccccc;
     font-family: Arial, Helvetica, sans-serif;
@@ -468,3 +463,4 @@ a:active.nav.last{
 	margin: 0;
     padding:10px;
 }
+/* ----------------------- collapsible container -----------------*/
