--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div id='index_block_center_wrapper'>
 		<div id='index_block_center'>
-			<div id='index_block_content'>
+			<div class='index_block_content'>
 				<h1>{{matches_header}}</h1>
 				(laddername)
 				<ul>
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div id='index_block_left'>
-		<div id='index_block_content'>
+		<div class='index_block_content'>
 			<h1>{{ladders_header}}</h1>
 			(matches played)
 			<ul>
@@ -33,7 +33,7 @@
 	</div>
 
 	<div id='index_block_right'>
-		<div id='index_block_content'>
+		<div class='index_block_content'>
 			<h1>{{players_header}}</h1>
 			(matches played)
 			<ul>
