--- a/website/templates/viewmatchgrid.html
+++ b/website/templates/viewmatchgrid.html
@@ -26,9 +26,14 @@
 					</div>
 				<p>Duration: {{l.duration}}</p>
 				<p>Played on {{l.date}}</p>
-				{% if l.replay %}
-					<p><a href="/{{l.replay}}"> Replay </a> </p>
-				{% endif %}
+				<p>
+					{% if l.replay %}
+						<a href="/{{l.replay}}">Replay</a> &nbsp;
+					{% endif %}
+					{% if discus_matches[l.id] is defined %}
+						<a href="/match?id={{l.id}}#disqus_thread">{{ discus_matches[l.id] }} comment{% if discus_matches[l.id] > 1 %}s{% endif %}</a>
+					{% endif %}
+				</p>
 				</div>
 				{% if count is divisibleby 3 %}
 					</div><div class="gridrow">
