--- a/website/templates/viewmatch.html
+++ b/website/templates/viewmatch.html
@@ -103,7 +103,7 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'springladder'; // required: replace example with your forum shortname
+var disqus_shortname = '{{disqus.forum}}'; // required: replace example with your forum shortname
 
     // The following are highly recommended additional parameters. Remove the slashes in front to use.
     var disqus_identifier = 'match_{{matchinfo.match.id }}';
