--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,7 +4,7 @@
 	<div id='index_block_center_wrapper'>
 		<div id='index_block_center'>
 			<div class='index_block_content'>
-				<h1>{{matches_header}} <a href="/feeds/matches" ><img src="/images/rss_orange_transp_2.png" alt="RSS"> </a></h1>
+				<h1>{{matches_header}} <a href="/feeds/matches" ><img src="/images/rss_standin.png" alt="RSS"> </a></h1>
 				(laddername)
 				<ul>
 				{% for l in matches %}
