yeah, more fixes

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -19,7 +19,7 @@
 	</div>
 	<div id='index_block_left'>
 		<div class='index_block_content'>
-			<h1>{{ladders_header}} <img src="/images/rss_standin.png" alt=""></h1>
+			<h1>{{ladders_header}} {#<img src="/images/rss_standin.png" alt="">#}</h1>
 			(matches played)
 			<ul>
 			{% for l in ladders %}
@@ -34,7 +34,7 @@
 
 	<div id='index_block_right'>
 		<div class='index_block_content'>
-			<h1>{{players_header}} <img src="/images/rss_standin.png" alt=""></h1>
+			<h1>{{players_header}} {#<img src="/images/rss_standin.png" alt="">#}</h1>
 			(matches played)
 			<ul>
 			{% for p in players %}
